Name: libcspm
License: BSD3
License-File: LICENSE.txt
Copyright: (c) 2011 Thomas Gibson-Robinson
Author: Thomas Gibson-Robinson <thomas.gibsonrobinson@gmail.com>
Maintainer: Thomas Gibson-Robinson <thomas.gibsonrobinson@gmail.com>
Bug-reports: https://github.com/tomgr/libcspm/issues
Homepage: https://github.com/tomgr/libcspm
Category: Concurrency
Build-type: Simple
Cabal-version: >=1.9.2
Synopsis: A library providing a parser, type checker and evaluator for CSPM.
Description:
    This library provides a parser, type checker and evaluator for machine CSP.
    The parser is designed to be compatible with FDR2 and, in particular, deals
    with the ambiguity between greater than and end of sequence in the same way
    (as far as possible, see "CSPM.Parser" for more information). The 
    typechecker is as liberal as it is possible to make a typechecker without
    making typechecking undecidable. Documentation on the type system is
    forthcoming. The evaluator is relatively experimental, but should be able
    to evaluate any CSPM expression that FDR2 can. The output of this phase
    (if a process is evaluated) is a tree of CSP (note not CSPM) operator 
    applications which should be suitable for input into a refinement checker, 
    or other process algebraic tool.
    .
    The main module of interest will be the "CSPM" module. This packages up 
    most of the functionality of the library in an easy to use, relatively
    high level format. See "CSPM" for an example of how to use this module.
Version: 0.3.0
Extra-source-files: 
    README.md,
    CHANGELOG.txt

Source-Repository head
    type:     git
    location: https://github.com/tomgr/libcspm
  
Source-repository this
    type:     git
    location: https://github.com/tomgr/libcspm
    tag: release-0.2.1

Library
    Build-Depends:
        array >= 0.3, 
        base >= 4 && < 5,
        bytestring >= 0.9,
        containers >= 0.4, 
        directory >= 1.0,
        filepath >= 1.2, 
        graph-wrapper >= 0.2,
        hashable >= 1.1,
        mtl >= 2.0,
        parsec >= 3.1,
        pretty >= 1.0,
        text >= 0.11,
        value-supply >= 0.6

    Exposed-Modules:
        CSPM,
        CSPM.Compiler.Events,
        CSPM.Compiler.Processes,
        CSPM.DataStructures.Literals,
        CSPM.DataStructures.Names,
        CSPM.DataStructures.Syntax,
        CSPM.DataStructures.Types,
        CSPM.Desugar,
        CSPM.Evaluator,
        CSPM.Evaluator.BuiltInFunctions,
        CSPM.Evaluator.DeclBind,
        CSPM.Evaluator.Environment,
        CSPM.Evaluator.Exceptions,
        CSPM.Evaluator.Expr,
        CSPM.Evaluator.Module,
        CSPM.Evaluator.Monad,
        CSPM.Evaluator.PatBind,
        CSPM.Evaluator.Values,
        CSPM.Evaluator.ValueSet,
        CSPM.Operators.CSP,
        CSPM.Operators.CSP.Desugar,
        CSPM.Operators.CSP.Evaluator,
        CSPM.Operators.CSP.Parser,
        CSPM.Operators.CSP.Parser.Exceptions,
        CSPM.Operators.CSP.Parser.Lexer,
        CSPM.Operators.CSP.Parser.Monad,
        CSPM.Operators.CSP.Parser.Parser,
        CSPM.Operators.CSP.Parser.Tokens,
        CSPM.Operators.CSP.PrettyPrinter,
        CSPM.Operators.CSP.Processes,
        CSPM.Operators.CSP.Renamer,
        CSPM.Operators.CSP.Syntax,
        CSPM.Operators.CSP.TypeChecker,
        CSPM.Operators.Custom,
        CSPM.Operators.Custom.CSPMParser,
        CSPM.Operators.Custom.Evaluator,
        CSPM.Operators.Custom.OperatorParsers,
        CSPM.Operators.Custom.OpSemDataStructures,
        CSPM.Operators.Custom.OpSemParser,
        CSPM.Operators.Custom.OpSemPrettyPrinter,
        CSPM.Operators.Custom.OpSemRules,
        CSPM.Operators.Custom.OpSemTypeChecker,
        CSPM.Operators.Custom.Syntax,
        CSPM.Parser,
        CSPM.PrettyPrinter,
        CSPM.Prelude,
        CSPM.Renamer,
        CSPM.TypeChecker,
        CSPM.TypeChecker.BuiltInFunctions,
        CSPM.TypeChecker.Common,
        CSPM.TypeChecker.Compressor,
        CSPM.TypeChecker.Decl,
        CSPM.TypeChecker.Dependencies,
        CSPM.TypeChecker.Environment,
        CSPM.TypeChecker.Exceptions,
        CSPM.TypeChecker.Expr,
        CSPM.TypeChecker.InteractiveStmt,
        CSPM.TypeChecker.Module,
        CSPM.TypeChecker.Monad,
        CSPM.TypeChecker.Pat,
        CSPM.TypeChecker.Unification,
        Util.Annotated,
        Util.Exception,
        Util.HierarchicalMap,
        Util.List,
        Util.Monad,
        Util.PartialFunctions,
        Util.Prelude,
        Util.PrettyPrint,
        Util.TextPrettyPrint
    
    Other-Modules:
        Paths_libcspm
    
    GHC-Options: -O3
    GHC-Prof-Options: -auto-all -prof
    
    Hs-Source-Dirs: src
    
    Extensions: DoAndIfThenElse

Test-Suite unit-tests
    Type: exitcode-stdio-1.0
    Main-is: Main.hs

    Extensions: DoAndIfThenElse
    
    GHC-Options: -O3
    
    Hs-Source-Dirs: tests
    
    Build-depends: 
        base,
        libcspm,
        filepath >= 1.2, 
        mtl >= 2.0,
        directory >= 1.0
