Name: libcspm
License: BSD3
License-File: LICENSE.txt
Copyright: (c) 2011 Thomas Gibson-Robinson
Author: Thomas Gibson-Robinson <thomas.gibsonrobinson@gmail.com>
Maintainer: Thomas Gibson-Robinson <thomas.gibsonrobinson@gmail.com>
Bug-reports: https://github.com/tomgr/libcspm/issues
Homepage: https://github.com/tomgr/libcspm
Category: Concurrency
Build-type: Simple
Cabal-version: >=1.9.2
Synopsis: A library providing a parser, type checker and evaluator for CSPM.
Description:
    This library provides a parser, type checker and evaluator for machine CSP.
    The parser is designed to be compatible with FDR2 and, in particular, deals
    with the ambiguity between greater than and end of sequence in the same way
    (as far as possible, see "CSPM.Parser" for more information). The 
    typechecker is as liberal as it is possible to make a typechecker without
    making typechecking undecidable. Documentation on the type system is
    forthcoming. The evaluator is relatively experimental, but should be able
    to evaluate any CSPM expression that FDR2 can. The output of this phase
    (if a process is evaluated) is a tree of CSP (note not CSPM) operator 
    applications which should be suitable for input into a refinement checker, 
    or other process algebraic tool.
    .
    The main module of interest will be the "CSPM" module. This packages up 
    most of the functionality of the library in an easy to use, relatively
    high level format. See "CSPM" for an example of how to use this module.
Version: 1.0.0
Extra-source-files: 
    README.md,
    CHANGELOG.txt

Source-Repository head
    type:     git
    location: https://github.com/tomgr/libcspm
  
Source-repository this
    type:     git
    location: https://github.com/tomgr/libcspm
    tag: release-1.0.0

Library
    Build-Depends:
        array >= 0.3, 
        base >= 4 && < 5,
        bytestring >= 0.9,
        containers >= 0.5, 
        deepseq >= 1.3 && < 1.4,
        directory >= 1.0,
        filepath >= 1.2, 
        graph-wrapper >= 0.2,
        hashable >= 1.1 && < 1.2,
        hashtables >= 1.0,
        mtl >= 2.0, 
        pretty >= 1.1,
        text >= 0.11 && < 0.12,
        value-supply >= 0.6

    Exposed-Modules:
        CSPM,
        CSPM.CommandLineOptions,
        CSPM.DataStructures.FreeVars,
        CSPM.DataStructures.Literals,
        CSPM.DataStructures.Names,
        CSPM.DataStructures.Syntax,
        CSPM.DataStructures.Types,
        CSPM.Desugar,
        CSPM.Evaluator,
        CSPM.Evaluator.BuiltInFunctions,
        CSPM.Evaluator.DeclBind,
        CSPM.Evaluator.DeepSeq,
        CSPM.Evaluator.Dot,
        CSPM.Evaluator.Environment,
        CSPM.Evaluator.Exceptions,
        CSPM.Evaluator.Expr,
        CSPM.Evaluator.File,
        CSPM.Evaluator.Monad,
        CSPM.Evaluator.PatBind,
        CSPM.Evaluator.ProcessValues,
        CSPM.Evaluator.Profiler,
        CSPM.Evaluator.Values,
        CSPM.Evaluator.ValueSet,
        CSPM.Evaluator.ValuePrettyPrinter,
        CSPM.Parser,
        CSPM.Parser.Exceptions,
        CSPM.Parser.Lexer,
        CSPM.Parser.Monad,
        CSPM.Parser.Parser,
        CSPM.Parser.Tokens,
        CSPM.PrettyPrinter,
        CSPM.Prelude,
        CSPM.Renamer,
        CSPM.TypeChecker,
        CSPM.TypeChecker.BuiltInFunctions,
        CSPM.TypeChecker.Common,
        CSPM.TypeChecker.Compressor,
        CSPM.TypeChecker.Decl,
        CSPM.TypeChecker.Environment,
        CSPM.TypeChecker.Exceptions,
        CSPM.TypeChecker.Expr,
        CSPM.TypeChecker.File,
        CSPM.TypeChecker.InteractiveStmt,
        CSPM.TypeChecker.Monad,
        CSPM.TypeChecker.Pat,
        CSPM.TypeChecker.Unification,
        Data.Graph.ST,
        Data.Set.MutableBit,
        Util.Annotated,
        Util.Exception,
        Util.FuzzyLookup,
        Util.HierarchicalMap,
        Util.List,
        Util.Monad,
        Util.MonadicPrettyPrint,
        Util.MonadicPrettyPrintInternal,
        Util.PartialFunctions,
        Util.Precedence,
        Util.Prelude,
        Util.PrettyPrint
    
    Other-Modules:
        Paths_libcspm
    
    GHC-Options:
        -O3
        -fwarn-missing-fields
        -fwarn-dodgy-imports
        -fwarn-missing-methods
        -fwarn-unused-imports
    GHC-Prof-Options: -auto-all -prof
    
    Hs-Source-Dirs: src
    
    Extensions: DoAndIfThenElse

Test-Suite libcspm_tests
    Type: exitcode-stdio-1.0
    Main-is: Main.hs

    Extensions: DoAndIfThenElse
    
    Hs-Source-Dirs: tests
    
    Build-depends: 
        base,
        directory >= 1.0,
        libcspm,
        filepath >= 1.2, 
        mtl >= 2.0,
        test-framework >= 0.6 && < 0.7
