Name: cspmchecker
License: BSD3
License-File: LICENSE.txt
Version: 0.1
Author: Thomas Gibson-Robinson <thomas.gibsonrobinson@gmail.com>
Maintainer: Thomas Gibson-Robinson <thomas.gibsonrobinson@gmail.com>
Category: Concurrency
Build-type: Simple
Cabal-version: >=1.9.2
  
Executable cspmchecker
  Main-is: Main.hs
  
  Build-depends: 
    base, 
    libcspm,
    filepath >= 1.2, 
    array >= 0.3, 
    containers >= 0.4, 
    mtl >= 2.0, 
    pretty >= 1.0,
    directory >= 1.0,
    haskeline >= 0.6,
    graph-wrapper >= 0.2
    
  Hs-Source-Dirs: src/Checker

Executable cspmcheckeri
  Main-is: Main.hs
  
  Build-depends: 
    base,
    libcspm,
    haskell98, 
    filepath >= 1.2, 
    array >= 0.3, 
    containers >= 0.4, 
    mtl >= 2.0, 
    pretty >= 1.0,
    directory >= 1.0,
    haskeline >= 0.6,
    graph-wrapper >= 0.2
  
  Hs-Source-Dirs: src/InteractiveChecker
