Name: cspmchecker
License: BSD3
License-File: LICENSE.txt
Copyright: (c) 2011 Thomas Gibson-Robinson
Author: Thomas Gibson-Robinson <thomas.gibsonrobinson@gmail.com>
Maintainer: Thomas Gibson-Robinson <thomas.gibsonrobinson@gmail.com>
Bug-reports: https://github.com/tomgr/libcspm/issues
Homepage: https://github.com/tomgr/libcspm
Category: Concurrency
Build-type: Simple
Cabal-version: >=1.9.2
Synopsis: A command line type checker for CSPM files.
Version: 0.1

Source-Repository head
    type:     git
    location: git://github.com/tomgr/libcspm.git
    subdir:   cspmchecker

Source-repository this
    type:     git
    location: git://github.com/tomgr/libcspm.git
    subdir:   cspmchecker
    tag:      0.1
  
Executable cspmchecker
  Main-is: Main.hs
  
  Build-depends: 
    base >= 4 && < 5,
    libcspm,
    filepath >= 1.2,
    mtl >= 2.0,
    directory >= 1.0
    
  Hs-Source-Dirs: src/Checker

--Executable cspmcheckeri
--  Main-is: Main.hs
--  
--  Build-depends: 
--    base >= 4 && < 5,
--    libcspm,
--    filepath >= 1.2, 
--    mtl >= 2.0,
--    directory >= 1.0,
--    haskeline >= 0.6
--  
--  Hs-Source-Dirs: src/InteractiveChecker
